@@ -1,20 +1,17 @@
-# $NetBSD: Makefile,v 1.6 2007/11/03 22:38:48 rillig Exp $
+# $NetBSD: Makefile,v 1.7 2008/02/09 14:53:14 reed Exp $
 
-DISTNAME=	pcc-0.9.8-070912
-PKGNAME=	pcc-0.9.8
+DISTNAME=	pcc-0.9.9
 CATEGORIES=	lang
-MASTER_SITES=	ftp://226.net120.skekraft.net/pcc/
+MASTER_SITES=	ftp://pcc.ludd.ltu.se/pub/ \
+		http://pcc.ludd.ltu.se/ftp/pub/pcc/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	reed@reedmedia.net
-HOMEPAGE=	http://www.ludd.ltu.se/~ragge/pcc/
+HOMEPAGE=	http://pcc.ludd.ltu.se/
 COMMENT=	Portable C compiler
 
 USE_TOOLS+=	lex yacc
-WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
 GNU_CONFIGURE=	yes
 MAKE_JOBS_SAFE=	no
-
-INSTALLATION_DIRS=	bin libexec
 
 .include "../../mk/bsd.pkg.mk"
